# RetoRappiAI

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  sonar-project.properties
.github/: dependency-review-config.yml
.github/workflows/: ci.yml  (+3 more)
.matplotlib/: fontlist-v390.json
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/analytics/: __init__.py  overview.py  repository.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  health.py  metrics.py
backend/app/chat/: brain.py  composer.py  enrichment.py  llm_client.py  memory.py  orchestrator.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: README.md  __init__.py  analytics.py
backend/app/schemas/: __init__.py  chat.py  health.py  metrics.py
backend/app/services/: __init__.py  chat_service.py  metrics_service.py
backend/tests/: conftest.py  test_chat.py  test_chat_brain.py  test_chat_composer.py  test_chat_eval.py  test_config.py  test_health.py  test_llm_client.py  test_metrics.py  test_overview.py  test_security.py
docs/: AI_STRATEGY.md  ARCHITECTURE.md  CHATBOT_GUIDE.md  DATA_DICTIONARY.md  DECISIONS.md  DEMO_SCRIPT.md  LECTURA_EJECUTIVA_DEL_DATO.md  NOTEBOOK_GUIDE.md  PRD.md  QUALITY_AND_SECURITY.md  TODO.md  VP_REVIEW_PLAYBOOK.md
frontend/: Dockerfile  components.json  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
notebooks/: 01_data_understanding.ipynb  02_data_cleaning_and_metrics.ipynb  03_insights_and_validation.ipynb
(+60 files in other folders)
